css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

//====== Imports
@import "normalize";
@import "base";
@import "algolia";


//====== Content Styles
.wrapper {
    display: flex;
    align-items: flex-start;
    max-width: $content-width;
    margin: 0 auto;
    font-size: $small-font-size;
}

.content {
    flex: 1 1 300px;
    background-color: $background-color;
}

.content__next {
    text-align: right;
}

.content__pagination {
    display: flex;
    justify-content: space-between;
    background-color: #ffffff;
    padding-top: 20px;
}

.content__post {
    margin-top: -28px;
    padding-left: 72px;
    padding-right: 72px;
    padding-top: 92px;
    padding-bottom: 40px;
    max-width: 500px;

    > ol {
        margin-bottom: 24px;

        li + li {
            margin-top: 8px;
        }
    }
}

.content__table {
    margin-top: 24px;

    ul {
        padding: 0;
        margin: 0;
    }

    li {
        list-style-type: none;
        padding: 0;
        margin: 0;
    }

    td {
        vertical-align: top;
    }
}

.content_table--duo {
    li + li {
        margin-top: 15px;
    }

    td {
        width: 40%;

        &:first-of-type {
            padding-right: 10px;
        }

        &:last-of-type {
            padding-left: 10px;
        }
    }
}

table:not(.content__table){
    border: 1px solid;
    border-collapse: collapse;

    td {
        border: 1px solid;
        padding: 4px;
    }
}

.rail {
    flex: 0 0 185px;
    margin-right: $content-gutter;
}

.rail__content {
    position: fixed;
}

.rail__header {
    text-align: center;
    margin-top: 63px;
    margin-bottom: 40px;
}

.footer_wrapper {
    margin: 0 auto;
    padding: $content-gutter;
    max-width: $content-width;
    width: 100%;
    font-size: $small-font-size;
}

.nav {
    margin: 0;
    padding: 0;

    a {
        text-decoration: none;
        color: #657987;
        transition: color 0.1s ease-in-out;

        &:hover {
            color: darken(#657987, 20%)
        }
    }
}

.nav__item {
    list-style-type: none;
    margin: 0;
    padding: 0;

    & + & {
        margin-top: 8px;
    }

    a.current {
        font-weight: 700;
    }
}

